refactor(home-dash): 重构项目配置和异常处理结构